<resources>
    <string name="app_name">画板</string>
    <string name="action_settings">Settings</string>
    <string name="width_1">1像素</string>
    <string name="width_2">5像素</string>
    <string name="width_3">10像素</string>
    <string name="color_red">红色</string>
    <string name="color_green">绿色</string>
    <string name="color_blue">蓝色</string>
    <string name="color">画笔颜色</string>
    <string name="width">画笔宽度</string>
    <string name="clear">擦除绘画</string>
    <string name="save">保存绘画</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="hello_world">Hello world!</string>
</resources>
